IssueWeb: fix overflow on issue title when using emojis

--- a/IssueWeb/app/index.css
+++ b/IssueWeb/app/index.css
@@ -76,6 +76,7 @@ textarea.TitleArea {
   margin: 2px;
   margin-bottom: 0px;
   white-space: normal;
+  overflow-y: hidden;
 }
 
 span.InputSaveButton {
